# my-plover-hid-machine

./: plover_machine_hid.py  setup.cfg
