[metadata]
name = my-plover-hid-machine
keywords = plover plover_plugin
version = 0.1.0
description = Plover HID + 75ms debounce + 8 extended keys for X1-X8
long_description = file:README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
  hid>=1.0.4
  bitstring>=3.1.9
py_modules =
  plover_machine_hid

[options.entry_points]
plover.machine =
  My HID Machine = plover_machine_hid:HidMachine
